dist/gotify/Deployment.alertmanager-bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: alertmanager-bridge
  name: alertmanager-bridge
  namespace: gotify
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: am-bridge-am-bridge-deployment-c847c321
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alertmanager-bridge
        cdk8s.io/metadata.addr: am-bridge-am-bridge-deployment-c847c321
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: GOTIFY_ENDPOINT
              value: http://gotify.gotify.svc.cluster.local:80/message
            - name: GOTIFY_TOKEN
              valueFrom:
                secretKeyRef:
                  key: GOTIFY_TOKEN
                  name: am-token
          image: ghcr.io/druggeri/alertmanager_gotify_bridge
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8080
          name: alertmanager-bridge
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8080
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
