dist/gotify/Deployment.gotify.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: gotify
  name: gotify
  namespace: gotify
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: gotify-gotify-deployment-c86d15c6
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: pvc-data
      labels:
        app.kubernetes.io/name: gotify
        cdk8s.io/metadata.addr: gotify-gotify-deployment-c86d15c6
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DB_PASSWORD
                  name: secrets
            - name: GOTIFY_DATABASE_CONNECTION
              value: host=prod.postgres.svc.cluster.local port=5432 user=gotify dbname=gotify password=$(DB_PASSWORD)
            - name: GOTIFY_DEFAULTUSER_PASS
              valueFrom:
                secretKeyRef:
                  key: GOTIFY_DEFAULTUSER_PASS
                  name: secrets
          image: ghcr.io/gotify/server
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
          name: gotify
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /app/data
              name: pvc-data
            - mountPath: /etc/gotify/config.yml
              name: configmap-config
              subPath: config.yml
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-data
          persistentVolumeClaim:
            claimName: data
            readOnly: false
        - configMap:
            name: config
          name: configmap-config
