dist/gotify/Service.alertmanager-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-bridge
  namespace: gotify
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: am-bridge-am-bridge-deployment-c847c321
  type: ClusterIP
