dist/gotify/Service.gotify.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
spec:
  externalIPs: []
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    cdk8s.io/metadata.addr: gotify-gotify-deployment-c86d15c6
  type: ClusterIP
