dist/gotify/Ingress.alertmanager-bridge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: alertmanager-bridge
  namespace: gotify
spec:
  rules:
    - host: alertmanager-bridge.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: alertmanager-bridge
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - alertmanager-bridge.cmdcentral.xyz
      secretName: alertmanager-bridge-tls
