dist/gotify/Ingress.gotify.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: gotify
  namespace: gotify
spec:
  rules:
    - host: gotify.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: gotify
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: notifications.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: gotify
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: notify.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: gotify
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - gotify.cmdcentral.xyz
        - notifications.cmdcentral.xyz
        - notify.cmdcentral.xyz
      secretName: gotify-tls
